# lightlayer-dashboard

./: .env.example  .gitignore  Caddyfile  LICENSE  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_scan_jobs.py  002_add_agent_events.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/api/: agent_events.py  api_keys.py  scan_jobs.py  scans.py  schemas.py  sites.py  users.py
backend/app/models/: __init__.py  agent_event.py  api_key.py  scan.py  scan_job.py  site.py  user.py
backend/tests/: conftest.py  test_agent_events.py  test_agent_layer.py  test_api.py  test_scan_jobs.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/analytics/: AgentTraffic.tsx
frontend/src/components/auth/: AuthForm.tsx
frontend/src/components/dashboard/: ScanTrigger.tsx  ScoreRing.tsx  SiteDetail.tsx  SiteList.tsx
frontend/src/components/settings/: ApiKeys.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts
