[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightlayer-dashboard"
version = "0.1.0"
description = "Agent-readiness scoring + agent traffic analytics dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.6",
    "httpx>=0.27",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "aiosqlite>=0.20",
]

[tool.ruff]
target-version = "py311"
line-length = 100
